<resources>
    <string name="app_name" translatable="false">Chuck NoteThis</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_home_activity">Your notes</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_detail_note">Detail note</string>
    <string name="title_edit_note">Edit</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email completions."</string>

    <!--Strings related to edit-->
    <string name="edit_title">Title</string>
    <string name="edit_text">Text</string>

    <!--Strings related to dialogs-->
    <string name="dialog_note_create">Save</string>
    <string name="dialog_note_discard">Cancel</string>
    <string name="remove_dialog_message">Do you really want to delete this note?</string>
    <string name="search_hint">Search notes…</string>
    <string name="edit_note">Edit</string>
    <string name="delete_note_button">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="remove_dialog_positive">Yes</string>
    <string name="remove_dialog_negative" translatable="false">No</string>
    <string name="audio_dialog_positive">Save</string>
    <string name="audio_dialog_negative">Cancel</string>
    <string name="remove_media_title">Confirm</string>
    <string name="remove_media_message">Are you sure you want delete this media?</string>

    <!--Note editor-->
    <string name="new_title">Title</string>
    <string name="new_text">Write your note here</string>
    <string name="save_note">Save</string>
    <string name="delete_note">Delete</string>
    <string name="image_edit_name">Image</string>
    <string name="video_edit_name" translatable="false">Video</string>

    <!--String related to toast-->
    <string name="save_note_toast">Note saved successfully</string>

    <!--String related to bottonbar-->

    <string name="bottom_bar_text_title">Text</string>
    <string name="bottom_bar_audio_title" translatable="false">Audio</string>
    <string name="bottom_bar_image_title">Image</string>
    <string name="bottom_bar_video_title" translatable="false">Video</string>
    <string name="bottom_bar_position_title">Position</string>
    <string name="bottom_bar_gallery_title">From gallery</string>

    <!--String related to option drawer-->
    <string name="order_settings">Order by</string>
    <string name="order_title">Order your notes</string>
    <array name="order_array">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Newest</item>
        <item>Oldest</item>
    </array>
    <string name="no_new_setting">Cancel</string>
    <string name="filter_settings">Filter</string>
    <string name="filter_title">Filter your notes</string>
    <array name="filter_array">
        <item>Text</item>
        <item>Audio</item>
        <item>Images</item>
        <item>Video</item>
    </array>
    <string name="card_settings">Notes View</string>
    <string name="card_view_title">Change view of your notes</string>
    <array name="card_view_array">
        <item>1 column</item>
        <item>2 columns</item>
        <item>3 columns</item>
    </array>
    <string name="invalid_lat_long_used">No valid position</string>
    <string name="no_address_found">No address</string>
    <string name="service_not_available">Service not available</string>
    <string name="address_found">The address wasn\'t found</string>

</resources>
