<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomBarText"
        android:icon="@drawable/ic_reorder_white_24dp"
        android:title="@string/bottom_bar_text_title"
        />

    <item
        android:id="@+id/bottomBarAudio"
        android:icon="@drawable/ic_keyboard_voice_white_24dp"
        android:title="@string/bottom_bar_audio_title"
    />

    <item
        android:id="@+id/bottomBarImage"
        android:icon="@drawable/ic_image_white_24dp"
        android:title="@string/bottom_bar_image_title"
        />

    <item
        android:id="@+id/bottomBarVideo"
        android:icon="@drawable/ic_local_movies_white_24dp"
        android:title="@string/bottom_bar_video_title"
        />


</menu>