<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout_insert_media"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_overlay"
    android:layout_gravity="bottom|right"
    android:fitsSystemWindows="true"
    tools:context=".EditNoteActivity">

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu_insert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        fab:fab_addButtonColorNormal="@color/colorPrimaryFab"
        fab:fab_addButtonColorPressed="@color/colorPrimaryBrightFab"
        fab:fab_addButtonPlusIconColor="@color/white"
        fab:fab_addButtonStrokeVisible="false"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_labelsPosition="left"
        android:layout_gravity="bottom|right">

        <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
            <!--android:id="@+id/fab_from_gallery"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--fab:fab_colorNormal="@color/colorAccent"-->
            <!--fab:fab_icon="@drawable/ic_perm_media_white_24dp"-->
            <!--fab:fab_size="mini"-->
            <!--fab:fab_title="@string/bottom_bar_gallery_title" />-->

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_icon="@drawable/ic_camera_alt_white_24dp"
            fab:fab_size="mini"
            fab:fab_title="@string/bottom_bar_image_title" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_icon="@drawable/ic_mic_white_24dp"
            fab:fab_size="mini"
            fab:fab_title="@string/bottom_bar_audio_title" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_icon="@drawable/ic_videocam_white_24dp"
            fab:fab_size="mini"
            fab:fab_title="@string/bottom_bar_video_title"/>

        <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
            <!--android:id="@+id/fab_position"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--fab:fab_colorNormal="@color/colorAccent"-->
            <!--fab:fab_icon="@drawable/ic_my_location_24dp"-->
            <!--fab:fab_size="mini"-->
            <!--fab:fab_title="@string/bottom_bar_position_title" />-->

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</FrameLayout>